# taxflow-agent

./: AI_Tax_Return_Case_Study_ GG.docx  PROJECT_PHASE_IMPLEMENTATION.md  README.md  ~$_Tax_Return_Case_Study_ GG.docx
backend/: .env  .gitignore  1040_FILING_INSTRUCTIONS.md  1040_field_mapping.txt  1040_fields_output.txt  CODE_QUALITY_REPORT.md  FORM_1040_FIELD_REFERENCE.md  FORM_1040_IMPLEMENTATION_SUMMARY.md  README.md  STREAMING_AGENT_GUIDE.md  TAX_CALCULATOR.md  pyproject.toml  tax-backend.service  tax_app.db  test_streaming.py
backend/app/: __init__.py  main.py
backend/app/agent/: graph.py  llm.py  nodes.py  state.py
backend/app/api/: endpoints.py
backend/app/core/: config.py
backend/app/db/: base.py  session.py
backend/app/models/: models.py
backend/app/schemas/: schemas.py
backend/app/services/: document_intelligence.py  document_service.py  (+7 more)
backend/docs/: 1040_FULL_CALCULATION.md  1040_field_mapping_template.json  AGENT_ACTIVITY_FEED.md  API_DOCUMENTATION.md
backend/scripts/: README.md  create_checkbox_reference.py  generate_labeled_1040.py  inspect_1040_fields.py  inspect_1040_fields_detailed.py  inspect_all_field_types.py  inspect_checkbox_values.py  list_1040_fields.py  refine_advisor_prompt.py  simple_checkbox_check.py  test_1040_final.py  test_1040_generation.py  test_agent_logs.py  test_azure_tax.py  test_complete_workflow.py  test_e2e_api.py  test_e2e_complete.py  test_e2e_full.py  test_extraction_api.py  test_field_mapping.py  test_mandatory_fields.py  test_tax_calculations.py  test_workflow_e2e.py
backend/tests/: test_tax_rules.py
(+37 files in other folders)
